discussion/kv_engine/158442/158442_rev7_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-47604: Add initial ABKVStore implentation

For now it's just acting as a wrapper around a CouchKVStore so that
we can get the bulk of the interface committed. In a future patch
we will add the config required to choose a and b KVStore types,
create the b KVStore, and start adding comparisons of results in
interesting places.

Change-Id: Iea2160fff50a57dc10d188ebf85d9f318fe07740

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-07-30 16:31:41.000000000
Message: 
Uploaded patch set 7: Patch Set 6 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-07-30 17:06:10.000000000
Message: 
Patch Set 7: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11013/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/ab-kvstore/ab-kvstore.cc:146:27: error: incomplete result type "RollbackResult" in function definition [clang-diagnostic-error]
RollbackResult ABKVStore::rollback(Vbid vbid,
                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/kvstore_iface.h:29:7: note: forward declaration of "RollbackResult"
class RollbackResult;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/ab-kvstore/ab-kvstore.cc:149:15: error: calling "rollback" with incomplete return type "RollbackResult" [clang-diagnostic-error]
    return a->rollback(vbid, rollbackseqno, std::move(ptr));
              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/kvstore_iface.h:356:28: note: "rollback" declared here
    virtual RollbackResult rollback(Vbid vbid,
                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/kvstore_iface.h:29:7: note: forward declaration of "RollbackResult"
class RollbackResult;
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11013/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/ab-kvstore/ab-kvstore.cc:146:27:
error: incomplete result type "RollbackResult" in function definition [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11013/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32609/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kvstore/ab-kvstore/ab-kvstore.cc:146:27:
error: incomplete result type "RollbackResult" in function definition
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32609/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/13145/ : FAILURE

Failure of GoogleTest "TransportProtocols/TenantTest.TenantStats/Mcbp":

<pre>
[ RUN      ] TransportProtocols/TenantTest.TenantStats/Mcbp
[2021-07-30T16:38:32.935Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/tests/testapp/testapp_tenant.cc:192: Failure
[2021-07-30T16:38:32.935Z] Expected equality of these values:
[2021-07-30T16:38:32.935Z]   10
[2021-07-30T16:38:32.935Z]   json["connections"]["current"].get<int>()
[2021-07-30T16:38:32.935Z]     Which is: 1
[2021-07-30T16:38:32.935Z] [  FAILED  ] TransportProtocols/TenantTest.TenantStats/Mcbp, where GetParam() = Mcbp (865 ms)
TransportProtocols/TenantTest.TenantStats/Mcbp
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/13145/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/9678/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/38242/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/619/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11720/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/635/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12606/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/20690/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12790/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
